Correctly include CSS, heh

--- a/markdown-reference/fr/index.html
+++ b/markdown-reference/fr/index.html
@@ -5,7 +5,7 @@
       Guide de référence pour Markdown
     </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/markdown-reference.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/markdown-reference.css" />
     <script type="text/javascript" src="../javascripts/jquery-1.2.6.min.js">
     </script>
     <script type="text/javascript" src="../javascripts/guide.js">
