--- a/markdown-reference/en/index.html
+++ b/markdown-reference/en/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Markdown Guide</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/markdown-reference.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/markdown-reference.css" />
     <script type="text/javascript" src="../javascripts/jquery-1.2.6.min.js"></script>
     <script type="text/javascript" src="../javascripts/guide.js"></script>
   </head>
