po2html seems to eat translations

--- a/markdown-reference/sv/index.html
+++ b/markdown-reference/sv/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="../javascripts/guide.js"></script>
 </head>
 <body>
-<h1 id="title">Markdown Guide</h1>
+<h1 id="title">Markdown Handbok</h1>
 <h2 class="section-name">Text</h2>
 <div class="section">
 	<table>
@@ -53,7 +53,7 @@
 			Markdown
 		</th>
 		<th>
-			Result
+			Resultat
 		</th>
 	</tr>
 	<tr>
@@ -140,7 +140,7 @@
 			Markdown
 		</th>
 		<th>
-			Result
+			Resultat
 		</th>
 	</tr>
 	<tr>
@@ -157,37 +157,38 @@
 				<li>Mjölk</li>
 				<li>Bröd</li>
 				<li>Öst
-				<li>Cheddar</li>
-				<li>Camembert</li>
-			</ul>
-			</li>
-			<li>Ris</li>
-		</ul>
-	</td>
-</tr>
-<tr class="alternate">
-	<td>
-		 # Mjölk<br />
-		 # Bröd<br />
-		 # Öst<br />
-		 &nbsp;&nbsp;# Cheddar<br />
-		 &nbsp;&nbsp;# Camembert<br />
-		 # Ris
-	</td>
-	<td>
-		<ol>
-			<li>Milk</li>
-			<li>Bread</li>
-			<li>Öst
-			<ol>
-				<li>Cheddar</li>
-				<li>Camembert</li>
-			</ol>
-			</li>
-			<li>Rice</li>
-		</ol>
-	</td>
-</tr>
+				  <ul>
+				    <li>Cheddar</li>
+				    <li>Camembert</li>
+			    </ul>
+			  </li>
+			  <li>Ris</li>
+		  </ul>
+	  </td>
+  </tr>
+  <tr class="alternate">
+  	<td>
+  		 # Mjölk<br />
+  		 # Bröd<br />
+  		 # Öst<br />
+  		 &nbsp;&nbsp;# Cheddar<br />
+  		 &nbsp;&nbsp;# Camembert<br />
+  		 # Ris
+  	</td>
+  	<td>
+  		<ol>
+  			<li>Mjölk</li>
+  			<li>Bröd</li>
+  			<li>Öst
+    			<ol>
+    				<li>Cheddar</li>
+    				<li>Camembert</li>
+    			</ol>
+  			</li>
+  			<li>Ris</li>
+  		</ol>
+  	</td>
+  </tr>
 </table>
 </div>
 </body>
