Update Swedish translation

--- a/markdown-reference/sv/index.html
+++ b/markdown-reference/sv/index.html
@@ -147,7 +147,7 @@
 		<td>
 			 * Mjölk<br />
 			 * Bröd<br />
-			 * Öst<br />
+			 * Ost<br />
 			 &nbsp;&nbsp;* Cheddar<br />
 			 &nbsp;&nbsp;* Camembert<br />
 			 * Ris
@@ -156,7 +156,7 @@
 			<ul>
 				<li>Mjölk</li>
 				<li>Bröd</li>
-				<li>Öst
+				<li>Ost
 				  <ul>
 				    <li>Cheddar</li>
 				    <li>Camembert</li>
@@ -170,7 +170,7 @@
   	<td>
   		 # Mjölk<br />
   		 # Bröd<br />
-  		 # Öst<br />
+  		 # Ost<br />
   		 &nbsp;&nbsp;# Cheddar<br />
   		 &nbsp;&nbsp;# Camembert<br />
   		 # Ris
@@ -179,7 +179,7 @@
   		<ol>
   			<li>Mjölk</li>
   			<li>Bröd</li>
-  			<li>Öst
+  			<li>Ost
     			<ol>
     				<li>Cheddar</li>
     				<li>Camembert</li>
