Swedish language update

--- a/markdown-reference/sv/index.html
+++ b/markdown-reference/sv/index.html
@@ -82,7 +82,7 @@
 	</tr>
 	</table>
 </div>
-<h2 class="section-name">Quotes</h2>
+<h2 class="section-name">Citat</h2>
 <div class="section">
 	<table>
 	<tr class="alternate">
