Fixing erroneous markup for numbered lists

--- a/markdown-reference/index.html
+++ b/markdown-reference/index.html
@@ -136,12 +136,12 @@
         </tr>
         <tr class="alternate">
           <td>
-            # Milk<br />
-            # Bread<br />
-            # Cheese<br />
-            &nbsp;&nbsp;# Cheddar<br />
-            &nbsp;&nbsp;# Camembert<br />
-            # Rice
+            1. Milk<br />
+            2. Bread<br />
+            3. Cheese<br />
+            &nbsp;&nbsp;1. Cheddar<br />
+            &nbsp;&nbsp;2. Camembert<br />
+            4. Rice
           </td>
           <td>
             <ol>
