Fix up HTML. Delete .po files as they are not needed any more.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Markdown Guide</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/markdown-reference.css" />
-    <script type="text/javascript" src="javascripts/jquery-1.2.6.min.js"></script>
+    <script type="text/javascript" src="javascripts/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="javascripts/guide.js"></script>
   </head>
   <body>
@@ -25,15 +25,11 @@
         </tr>
         <tr class="alternate">
           <td>This text is *italicized*.</td>
-          <td>This text is <em>italicized<em>.</td>
+          <td>This text is <em>italicized</em>.</td>
         </tr>
         <tr>
-          <td>
-            `This is some code.`
-          </td>
-          <td>
-            <code>This is some code.</code>
-          </td>
+          <td>`This is some code.`</td>
+          <td><code>This is some code.</code></td>
         </tr>
       </table>
     </div>
@@ -94,7 +90,7 @@
         </tr>
         <tr>
           <td>Send me an email at &lt;address@example.com&gt;.</td>
-          <td>Send me an email at <a href="address@example.com">address@example.com</a>.</td>
+          <td>Send me an email at <a href="mailto:address@example.com">address@example.com</a>.</td>
         </tr>
         <tr>
           <td>![37signals logo](http://www.37signals.com/images/logo-37signals.png)</td>
