--- a/en/index.html
+++ b/en/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Markdown Guide</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/markdown-reference.css" />
-    <script type="text/javascript" src="../javascripts/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="../javascripts/guide.js"></script>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <link href="../stylesheets/markdown-reference.css" rel="stylesheet" media="screen" type="text/css" />
+    <script src="../javascripts/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="../javascripts/guide.js" type="text/javascript"></script>
   </head>
   <body>
     
@@ -89,7 +89,7 @@
           <td>Link to <a href="http://google.com" target="_blank">Google</a>.</td>
         </tr>
         <tr>
-          <td>Send me an email at &lt;address@example.com&gt;.</td>
+          <td>Send me an email at <address@example.com>.</td>
           <td>Send me an email at <a href="mailto:address@example.com">address@example.com</a>.</td>
         </tr>
         <tr>
@@ -112,8 +112,8 @@
             * Milk<br />
             * Bread<br />
             * Cheese<br />
-            &nbsp;&nbsp;* Cheddar<br />
-            &nbsp;&nbsp;* Camembert<br />
+              * Cheddar<br />
+              * Camembert<br />
             * Rice
           </td>
           <td>
@@ -135,8 +135,8 @@
             1. Milk<br />
             2. Bread<br />
             3. Cheese<br />
-            &nbsp;&nbsp;1. Cheddar<br />
-            &nbsp;&nbsp;2. Camembert<br />
+              1. Cheddar<br />
+              2. Camembert<br />
             4. Rice
           </td>
           <td>
