--- a/fr/index.html
+++ b/fr/index.html
@@ -4,7 +4,7 @@
     <title>Guide de référence pour Markdown</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <link href="../stylesheets/markdown-reference.css" rel="stylesheet" media="screen" type="text/css" />
-    <script src="../javascripts/jquery-1.2.6.min.js" type="text/javascript"></script>
+    <script src="../javascripts/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="../javascripts/guide.js" type="text/javascript"></script>
   </head>
   <body>
@@ -24,8 +24,8 @@
           <td>Ce texte est en <strong>gras</strong>.</td>
         </tr>
         <tr class="alternate">
-          <td>Ce texte est *italique*.</td>
-          <td>Ce texte est <em>italique</em>.</td>
+          <td>Ce texte est en *italique*.</td>
+          <td>Ce texte est en <em>italique.</em>.</td>
         </tr>
         <tr>
           <td>`Ceci est du code.`</td>
@@ -69,11 +69,9 @@
             </td>
           <td>
             <blockquote>
-              This is the first level of quoting.
-              <blockquote>
-                Ceci est une citation imbriquée.
-              </blockquote>
-              Back to the first level.
+              Ceci est le premier niveau de citation.
+              <blockquote>Ceci est une citation imbriquée.</blockquote>
+              Retour au premier niveau.
             </blockquote>
           </td>
         </tr>        
@@ -89,7 +87,7 @@
           <td>Lien vers <a href="http://google.fr" target="_blank">Google</a>.</td>
         </tr>
         <tr>
-          <td>Envoyez-mopi un e-mail à <adresse@exemple.com>.</td>
+          <td>Envoyez-mopi un e-mail à &lt;adresse@exemple.com&gt;.</td>
           <td>Envoyez-moi un e-mail à <a href="mailto:address@example.com">adresse@exemple.com</a> .</td>
         </tr>
         <tr>
@@ -108,21 +106,19 @@
           <th>Résultat</th>
         </tr>
         <tr>
-          <td>
-            * Lait<br />
-            * Pain<br />
-            * Fromage<br />
-            &nbsp;&nbsp;* Gruyère<br />
-            &nbsp;&nbsp;* Camembert<br />
-            * Riz
-            </td>
+          <td>* Lait<br />
+* Pain<br />
+* Fromage<br />
+&nbsp;&nbsp;* Gruyère<br /> 
+&nbsp;&nbsp;* Camembert<br />
+* Riz</td>
           <td>
             <ul>
               <li>Lait</li>
               <li>Pain</li>
-              <li>Cheese
+              <li>Fromage
                 <ul>
-                  <li>Cheddar</li>
+                  <li>Gruyère</li>
                   <li>Camembert</li>
                 </ul>
               </li>
@@ -134,16 +130,16 @@
           <td>1. Lait <br />
 2. Pain <br />
 3. Fromage <br />
-  1. Cheddar <br />
-  2. Camembert <br />
+&nbsp;&nbsp;1. Gruyère <br />
+&nbsp;&nbsp;2. Camembert <br />
 4. Riz</td>
           <td>
             <ol>
               <li>Lait</li>
               <li>Pain</li>
-              <li>Cheese
+              <li>Fromage
                 <ol>
-                  <li>Cheddar</li>
+                  <li>Gruyère</li>
                   <li>Camembert</li>
                 </ol>
               </li>
