Catalan translation update.

--- a/ca/index.html
+++ b/ca/index.html
@@ -64,13 +64,13 @@
         <tr class="alternate">
           <td>
              > Aquest és el primer nivell de citació.<br />
-             >> Això és un bloc de citació aniuat.<br />
+             >> Això és una citació imbricada.<br />
              > Retorn al primer nivell.
              </td>
           <td>
             <blockquote>
               Aquest és el primer nivell de citació.
-              <blockquote>Això és un bloc de citació aniuat.</blockquote>
+              <blockquote>Això és una citació imbricada.</blockquote>
               Retorn al primer nivell.
             </blockquote>
           </td>
@@ -87,11 +87,11 @@
           <td>Enllaç a <a href="http://google.com" target="_blank">Google</a>.</td>
         </tr>
         <tr>
-          <td>Envia'm un correu a &lt;adreça@exemple.com&gt;.</td>
+          <td>Envia'm un correu a <adreça@exemple.com>.</td>
           <td>Envia'm un correu a <a href="mailto:adreça@exemple.com">adreça@exemple.com</a>.</td>
         </tr>
         <tr>
-          <td>![logotip de 37signals](http://www.37signals.com/images/logo-37signals.png)</td>
+          <td>![Logotip de 37signals](http://www.37signals.com/images/logo-37signals.png)</td>
           <td><img src="http://www.37signals.com/images/logo-37signals.png" alt="Logotip de 37signals" /></td>
         </tr>
       </table>
@@ -109,7 +109,7 @@
           <td>* Llet<br />
 * Pa<br />
 * Formatge<br />
-&nbsp;&nbsp;* Cheddar<br />
+&nbsp;&nbsp;* Gruyère<br />
 &nbsp;&nbsp;* Camembert<br />
 * Arròs</td>
           <td>
@@ -118,7 +118,7 @@
               <li>Pa</li>
               <li>Formatge
                 <ul>
-                  <li>Cheddar</li>
+                  <li>Gruyère</li>
                   <li>Camembert</li>
                 </ul>
               </li>
@@ -131,7 +131,7 @@
             1. Llet<br />
             2. Pa<br />
             3. Formatge<br />
-              1. Cheddar<br />
+              1. Gruyère<br />
               2. Camembert<br />
             4. Arròs
           </td>
@@ -141,7 +141,7 @@
               <li>Pa</li>
               <li>Formatge
                 <ol>
-                  <li>Cheddar</li>
+                  <li>Gruyère</li>
                   <li>Camembert</li>
                 </ol>
               </li>
