Add contributed Spanish translation

--- a/ca/index.html
+++ b/ca/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html xml:lang="ca" lang="ca" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Guia de referència de Markdown</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
@@ -87,7 +87,7 @@
           <td>Enllaç a <a href="http://google.com" target="_blank">Google</a>.</td>
         </tr>
         <tr>
-          <td>Envia'm un correu a <adreça@exemple.com>.</td>
+          <td>Envia'm un correu a &lt;adreça@exemple.com&gt;.</td>
           <td>Envia'm un correu a <a href="mailto:adreça@exemple.com">adreça@exemple.com</a>.</td>
         </tr>
         <tr>
