--- a/sv/index.html
+++ b/sv/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html xml:lang="sv" lang="sv" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Markdown Handbok</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
