Update translations for CA, ES and SV

--- a/ca/index.html
+++ b/ca/index.html
@@ -64,13 +64,13 @@
         <tr class="alternate">
           <td>
              > Aquest és el primer nivell de citació.<br />
-             >> Això és una citació imbricada.<br />
+             >> Això és una citació sagnada.<br />
              > Retorn al primer nivell.
              </td>
           <td>
             <blockquote>
               Aquest és el primer nivell de citació.
-              <blockquote>Això és una citació imbricada.</blockquote>
+              <blockquote>Això és una citació sagnada.</blockquote>
               Retorn al primer nivell.
             </blockquote>
           </td>
