--- a/es/index.html
+++ b/es/index.html
@@ -69,18 +69,18 @@
           </td>
           <td>
             <blockquote>
-              This is the first level of quoting.
+              Este es el primer nivel de la cita.
               <blockquote>
                  Esto es una cita anidada. 
               </blockquote>
-              Back to the first level.
+              Vuelta al primer nivel.
             </blockquote>
           </td>
         </tr>        
       </table>
     </div>
     
-    <h2 class="section-name">Enlaces i imágenes</h2>
+    <h2 class="section-name">Enlaces y imágenes</h2>
     
     <div class="section">
       <table>
