--- a/sv/index.html
+++ b/sv/index.html
@@ -67,9 +67,9 @@
 > Tillbaka till första nivån.</td>
           <td>
             <blockquote>
-              This is the first level of quoting.
+              Detta är den första nivån citera.
               <blockquote>Detta är kapslade blockquote.</blockquote>
-              Back to the first level.
+              Tillbaka till första nivån.
             </blockquote>
           </td>
         </tr>        
